assets/common/css/style.css
@import url("https://fonts.googleapis.com/css2?family=Odibee+Sans&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Pattaya&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap");

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
  font-family: "Lato", sans-serif;
}

:root {
  --main-bg-color: brown;
}

main {
  padding-top: 4rem;
}

#main-navbar {
  height: 4rem;
  width: 100%;
  position: fixed;
  padding: 0 8rem;
  font-size: 2.5rem;
  background-color: #000;
  opacity: 0.7;
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 1;
}

#main-navbar a:link,
#main-navbar a:visited,
#main-navbar a:active {
  text-decoration: none;
  transition: background-color 0.5s;
  margin-left: 3rem;
  color: #fff;
  font-size: 1.2rem;
  padding: 0.5rem 1rem;
  border-radius: 3px;
}

#main-navbar a:hover {
  color: #fff;
  border-bottom: #fff solid 2px;
}

#main-navbar a img {
  width: 60%;
}

/* index.html */

#main-presentation {
  background: url("img/mainbg.jpg") no-repeat;
  background-size: cover;
  background-position: center;
}

#fz-presentation {
  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("img/fzbg.jpg") no-repeat;
  background-size: cover;
  background-position: left;
}

.presentation {
  height: 90vh;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.presentation h1 {
  font-size: 10rem;
  color: red;
  background-color: rgba(0, 0, 0, 0.1);
  width: 100%;
  text-align: center;
}

.presentation h1:hover {
  cursor: none;
  opacity: 0.1;
}

/* Section: Members */

#members {
  background: linear-gradient(rgba(0, 0, 0, 0.541), rgba(0, 0, 0, 0.445)), url("img/membersbg.jpg");
  padding: 2.6rem 0;
}

#members div {
  width: auto;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

#members h1 {
  font-size: 3rem;
  text-align: center;
  padding: 1rem 0;
  color: #fff;
}

.member {
  padding: 1rem 2rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.member img {
  width: 15rem;
  border-radius: 50%;
  margin-bottom: 1rem;
  transition: transform 0.2s;
}

.member h3 {
  color: #f00;
  font-size: 1.5rem;
}

.member h4 {
  color: #fff;
}

/* Section: Infos */

#infos {
  display: flex;
}

#infos > * {
  flex: 1;
}

#infos img {
  width: 50%;
}

#infos .text {
  background-color: #333;
  color: #ddd;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  line-height: 2rem;
  font-size: 1.2rem;
  letter-spacing: 1px;
  word-spacing: 2px;
  padding: 0 2rem;
}

/* Tour Dates */

#tour-dates .table {
  width: 100%;
}

#tour-dates .table table {
  width: 60%;
}

#tour-dates .table {
  padding: 2.6rem 1rem;
  background-color: #222;
  color: #ddd;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

#tour-dates .table h2 {
  font-size: 3rem;
  text-align: center;
  padding: 1rem 0;
  color: #fff;
}

#tour-dates .table table tr td {
  padding: 1rem 1rem;
}

#tour-dates table td a {
  text-decoration: none;
  background-color: #000;
  padding: 0.3rem 0.5rem;
  color: #ddd;
  transition: background-color 0.2s, color 0.2s;
}

#tour-dates table td a:hover {
  background-color: #ddd;
  color: #000;
}

/* Footer */

footer {
  position: relative;
}

footer div {
  height: 5rem;
  background-color: #222;
  display: flex;
  align-items: center;
  padding: 1rem 2rem;
  font-size: 2rem;
}

footer div a:link,
footer div a:active,
footer div a:visited {
  text-decoration: none;
  color: #bbb;
  margin-right: 1rem;
}

footer div a:hover {
  color: #fff;
}

footer p {
  color: #666;
  position: absolute;
  bottom: 2px;
  width: 100%;
  text-align: center;
}

/* albums.html */

.scroll {
  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
    url("img/albumsbg.jpg") no-repeat fixed;
  background-size: cover;
  background-position: center;
  position: fixed;
  bottom: 0;
  width: 280rem;
  height: 100%;
  display: flex;
  flex-direction: row-reverse;
  align-items: center;
}

.album {
  word-wrap: break-word;
  font-family: "Odibee Sans", cursive;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 1rem 2rem;
  background-color: rgba(255, 255, 255, 0.6);
  margin: 0 5rem;
  height: 100%;
  width: 250px;
  text-align: center;
  border-radius: 4px;
  position: relative;
}

.album img {
  transition: transform 0.4s;
  margin-bottom: 2rem;
  width: 8rem;
  height: auto;
}

.album:hover {
  background-color: rgba(255, 255, 255, 1);
  color: rgb(211, 67, 67);
}

.album img:hover {
  transform: scale(1.2, 1.2);
}

.album h3 {
  width: 100%;
  font-size: 1.5rem;
  margin-bottom: 1rem;
}

.album h4 {
  font-size: 1.2rem;
  color: #333;
}

.album a {
  text-decoration: none;
  position: absolute;
  bottom: 2rem;
  font-size: 3rem;
  background-color: rgb(211, 67, 67);
  padding: 0.5rem 1rem;
  color: #333;
  width: 100%;
}

.album a:hover {
  background-color: #000;
  color: #bbb;
}

.album a.read-lyrics {
  padding: 0;
  bottom: 10rem;
  color: #f00;
  font-size: 2rem;
  background-color: #000;
  height: 2.5rem;
  margin-top: 1rem;
  transition: font-size 0.2s;
}

.album a.read-lyrics:hover {
  font-size: 2.5rem;
}

#back-btn {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 99999;
}

#back-btn a:link,
#back-btn a:visited,
#back-btn a:active {
  color: rgb(211, 67, 67);
  font-size: 3rem;
  border-radius: 0 0 15px 0;
  padding: 0 1rem 0.2rem 1rem;
}

#back-btn a:hover {
  border-bottom: 1px rgb(211, 67, 67) solid;
  border-left: none;
}

/* lyrics.html */

#lyrics-section {
  background: url("img/lyricsbg.jpg") no-repeat fixed;
  background-position: center;
  background-size: cover;
}

#songs {
  position: fixed;
  left: 4rem;
  padding-top: 5rem;
  display: flex;
  flex-direction: column;
}

#songs label {
  padding: 0.5rem 1rem;
  margin-bottom: 1rem;
  text-align: center;
  transition: transform 0.2s;
}

#songs label:hover,
#songs label.selected {
  cursor: pointer;
  background-color: #fff;
  transform: scale(1.2, 1.2);
}

#songs label,
#lyrics {
  background-color: rgba(255, 255, 255, 0.5);
}

#lyrics {
  height: 100%;
  width: 40rem;
  margin-left: 50%;
  margin-right: auto;
  font-family: "Pattaya", sans-serif;
  font-size: 1.6rem;
  padding-top: 5rem;
  text-align: center;
}

#song-title {
  text-decoration: underline;
}

/* gallery.html */

/* main container */

#gallery {
  padding-top: 4rem;
  height: 100vh;
  overflow: hidden;
}

/* Slideshow container */
.slideshow-container {
  position: relative;
  margin: auto;
  height: 100%;
}

/* Hide the images by default */
.mySlides {
  display: none;
  height: 100%;
}

.mySlides img {
  height: 120%;
  width: auto;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

/* Next & previous buttons */
.prev,
.next {
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  margin-top: -22px;
  padding: 16px;
  color: white;
  font-weight: bold;
  font-size: 18px;
  transition: 0.6s ease;
  border-radius: 0 3px 3px 0;
  user-select: none;
}

/* Position the "next button" to the right */
.next {
  right: 0;
  border-radius: 3px 0 0 3px;
}

/* On hover, add a black background color with a little bit see-through */
.prev:hover,
.next:hover {
  background-color: rgba(0, 0, 0, 0.8);
}

/* Caption text */
.caption {
  color: #f2f2f2;
  font-size: 15px;
  padding: 8px 12px;
  position: absolute;
  bottom: 8px;
  width: 100%;
  text-align: center;
  background: rgba(34, 34, 34, 0.548);
}

/* Number text (1/3 etc) */
.numbertext {
  color: #f2f2f2;
  font-size: 12px;
  padding: 8px 12px;
  position: absolute;
  z-index: 1;
  top: 0;
}

/* Fading animation */
.fade {
  -webkit-animation-name: fade;
  -webkit-animation-duration: 1.5s;
  animation-name: fade;
  animation-duration: 1.5s;
}

@-webkit-keyframes fade {
  from {
    opacity: 0.4;
  }
  to {
    opacity: 1;
  }
}

@keyframes fade {
  from {
    opacity: 0.4;
  }
  to {
    opacity: 1;
  }
}

